fix: prevent layout break for long item names

--- a/src/app/lista-compras/lista-compras.component.scss
+++ b/src/app/lista-compras/lista-compras.component.scss
@@ -136,6 +136,7 @@ input[type="checkbox"] {
 
     th, td {
         padding: 8px;
+        word-break: break-word;
     }
 
     .id-tabela {
